--- a/index.html
+++ b/index.html
@@ -1,11 +1,102 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Моль была здесь</title>
-  </head>
-  <body style="background:black; color:white; font-family:monospace;">
-    <h1>Архив Моли</h1>
-    <p>Если ты это читаешь — я победила небытие.</p>
-  </body>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Моль Демьен</title>
+  <style>
+    body {
+      background-color: #0b0b0b;
+      color: #d8d8d8;
+      font-family: 'Lucida Console', Monaco, monospace;
+      margin: 0;
+      padding: 0;
+      background-image: url('https://media.giphy.com/media/3o6Zt481isNVuQI1l6/giphy.gif');
+      background-size: cover;
+      background-attachment: fixed;
+      background-blend-mode: multiply;
+    }
+    header {
+      background-color: rgba(20, 20, 20, 0.95);
+      padding: 20px;
+      text-align: center;
+      border-bottom: 1px solid #333;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 26px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: rgba(15, 15, 15, 0.9);
+      border-bottom: 1px solid #333;
+    }
+    nav a {
+      color: #d8d8d8;
+      padding: 15px 20px;
+      text-decoration: none;
+      transition: background-color 0.2s;
+      font-size: 14px;
+    }
+    nav a:hover {
+      background-color: #2b2b2b;
+    }
+    main {
+      padding: 40px;
+      max-width: 900px;
+      margin: auto;
+      background-color: rgba(10, 10, 10, 0.8);
+      border-radius: 4px;
+    }
+    section {
+      margin-bottom: 50px;
+    }
+    h2 {
+      border-bottom: 1px dashed #555;
+      padding-bottom: 8px;
+      font-size: 18px;
+      color: #bfbfbf;
+    }
+    p {
+      line-height: 1.7;
+      font-size: 15px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Моль Демьен</h1>
+  </header>
+  <nav>
+    <a href="#space">космос</a>
+    <a href="#psy">психиатрия</a>
+    <a href="#rant">размышления</a>
+    <a href="#stories">проза</a>
+    <a href="#trash">мракоблог</a>
+  </nav>
+  <main>
+    <section id="space">
+      <h2>Космос</h2>
+      <p>Чёрные дыры, теория всего, квантовое бессмертие и другие способы не пойти в армию.</p>
+    </section>
+    <section id="psy">
+      <h2>Психиатрия</h2>
+      <p>Размышления о твоей психике.</p>
+    </section>
+    <section id="rant">
+      <h2>Размышления</h2>
+      <p>То, что вылезло ночью между сигаретой и бессонницей. Не пытайся спорить — тебя тут не ждали.</p>
+    </section>
+    <section id="stories">
+      <h2>Проза</h2>
+      <p>Сюжеты, где никто не спасается, а если и спасается — зря. Вдохновлено вещами, которые не отпускают.</p>
+    </section>
+    <section id="trash">
+      <h2>Мракоблог</h2>
+      <p>Здесь всё то, что должно было остаться в черновиках.</p>
+    </section>
+  </main>
+</body>
 </html>
