--- a/index.html
+++ b/index.html
@@ -1,209 +1,6 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Моль Демьен</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
-
-    body {
-      background-color: #000;
-      color: #e0e0e0;
-      font-family: 'UnifrakturCook', cursive;
-      margin: 0;
-      padding: 0;
-      background-image: url('https://i.gifer.com/YlWC.gif');
-      background-size: cover;
-      background-attachment: fixed;
-      background-blend-mode: darken;
-      cursor: url('https://cur.cursors-4u.net/cursors/cur-13/cur1174.cur'), auto;
-    }
-    header {
-      background-color: rgba(0, 0, 0, 0.8);
-      padding: 20px;
-      text-align: center;
-      border-bottom: 1px solid #222;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 34px;
-      text-shadow: 0 0 8px #666;
-      color: #eee;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: rgba(10, 10, 10, 0.95);
-      border-bottom: 1px solid #222;
-    }
-    nav a {
-      color: #ccc;
-      padding: 15px 25px;
-      text-decoration: none;
-      transition: background-color 0.3s;
-      font-size: 16px;
-    }
-    nav a:hover {
-      background-color: #111;
-    }
-    main {
-      padding: 40px;
-      max-width: 1000px;
-      margin: auto;
-      background-color: rgba(5, 5, 5, 0.9);
-      border-radius: 8px;
-    }
-    section {
-      margin-bottom: 60px;
-    }
-    h2 {
-      border-bottom: 1px dashed #444;
-      padding-bottom: 6px;
-      font-size: 22px;
-      color: #f0f0f0;
-      text-shadow: 0 0 5px #666;
-      transition: all 0.3s ease;
-    }
-    h2:hover {
-      color: #ff0044;
-    }
-    p {
-      font-size: 16px;
-      line-height: 1.8;
-    }
-    .section-img {
-      width: 100%;
-      border-radius: 4px;
-      margin-top: 20px;
-      opacity: 0.9;
-    }
-    #chatbox {
-      background: rgba(20, 20, 20, 0.9);
-      padding: 20px;
-      border: 1px solid #444;
-      margin-top: 80px;
-    }
-    #chatbox input {
-      width: 80%;
-      padding: 10px;
-      font-family: monospace;
-      background: #000;
-      color: #ccc;
-      border: 1px solid #666;
-    }
-    #chatbox button {
-      padding: 10px 20px;
-      background: #111;
-      color: #ccc;
-      border: 1px solid #555;
-      margin-left: 10px;
-    }
-    #chat-response {
-      margin-top: 20px;
-      font-style: italic;
-      color: #888;
-    }
-  </style>
-</head>
-<body>
-  <audio id="hoverSound" src="https://cdn.pixabay.com/download/audio/2022/03/30/audio_655b4f4460.mp3?filename=creepy-whisper-1-7052.mp3"></audio>
-  <audio id="chatClick" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_bbe8d3079f.mp3?filename=click-classic-7-190099.mp3"></audio>
-
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      const h2s = document.querySelectorAll('h2');
-      const hoverSound = document.getElementById('hoverSound');
-
-      h2s.forEach(h2 => {
-        h2.addEventListener('mouseenter', () => {
-          hoverSound.currentTime = 0;
-          hoverSound.play();
-        });
-      });
-
-      // Загрузка фразы
-      const phrases = [
-        "ты не должен был вернуться",
-        "здесь кто-то уже был до тебя",
-        "ничего не закончено",
-        "пиши... пока есть чернила",
-        "я всё ещё слушаю",
-        "молчание — тоже ответ"
-      ];
-      const random = phrases[Math.floor(Math.random() * phrases.length)];
-      const quote = document.createElement('div');
-      quote.innerText = random;
-      quote.style.textAlign = 'center';
-      quote.style.marginTop = '10px';
-      quote.style.color = '#666';
-      quote.style.fontStyle = 'italic';
-      document.body.insertBefore(quote, document.body.children[1]);
-    });
-
-    function respondToUser() {
-      const clickSound = document.getElementById("chatClick");
-      clickSound.play();
-      const responseBox = document.getElementById("chat-response");
-      const input = document.getElementById("userInput").value;
-      const replies = [
-        "я тебя услышал.",
-        "это останется между нами.",
-        "не здесь. не сейчас.",
-        "я записал это в пыль.",
-        "твой голос остался в стенах."
-      ];
-      if (input.trim()) {
-        responseBox.innerText = replies[Math.floor(Math.random() * replies.length)];
-      }
-    }
-  </script>
-
-  <header>
-    <h1>Моль Демьен</h1>
-  </header>
-  <nav>
-    <a href="#space">космос</a>
-    <a href="#psy">психиатрия</a>
-    <a href="#rant">размышления</a>
-    <a href="#stories">проза</a>
-    <a href="#trash">мракоблог</a>
-  </nav>
-  <main>
-    <section id="space">
-      <h2>Космос</h2>
-      <p>Глубина, симуляция, обнуление. Вселенная как ошибка, а ты как баг с душой.</p>
-      <img class="section-img" src="https://media.tenor.com/0IAPMPkUNOsAAAAC/glitch-void.gif" alt="dark simulation">
-    </section>
-    <section id="psy">
-      <h2>Психиатрия</h2>
-      <p>Шизоидные паттерны, углы восприятия, медикаментозное бессмертие. Всё, что шепчет тишина в палате.</p>
-      <img class="section-img" src="https://media.tenor.com/PNRaTUBvPHMAAAAC/broken-inside.gif" alt="shizo gif">
-    </section>
-    <section id="rant">
-      <h2>Размышления</h2>
-      <p>Если бы ты мог выкричать это в потолок — выкрикнул бы. Но ты пишешь, потому что чернила дешевле крика.</p>
-      <img class="section-img" src="https://media.tenor.com/T_gj8aUwR4sAAAAd/writing.gif" alt="dark thinking">
-    </section>
-    <section id="stories">
-      <h2>Проза</h2>
-      <p>Молчаливые персонажи. Темные улицы. Финалы без морали. Это не выдумка — это отражение.</p>
-      <img class="section-img" src="https://media.tenor.com/OAiRmuBQwVIAAAAd/gothic-window.gif" alt="goth silhouette">
-    </section>
-    <section id="trash">
-      <h2>Мракоблог</h2>
-      <p>Здесь всё, что не надо было писать. Но ты написал. Потому что внутри уже всё было написано.</p>
-      <img class="section-img" src="https://media.tenor.com/CnWRRVQJKZAAAAAC/glitch-dark.gif" alt="vhs decay">
-    </section>
-
-    <div id="chatbox">
-      <h2>Напиши мне</h2>
-      <input type="text" id="userInput" placeholder="Скажи что-нибудь...">
-      <button onclick="respondToUser()">Отправить</button>
-      <div id="chat-response"></div>
-    </div>
-  </main>
-</body>
-</html>
+<link rel="stylesheet" href="style.css">
+<script src="effects.js" defer></script>
+<script src="interact.js" defer></script>
 
 
 
