--- a/index.html
+++ b/index.html
@@ -8,36 +8,49 @@
   <script src="interact.js" defer></script>
 </head>
 <body>
-  <audio id="clickSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_bbe8d3079f.mp3?filename=click-classic-7-190099.mp3"></audio>
-
   <header>
     <h1>Моль Демьен</h1>
   </header>
 
   <nav>
     <ul>
-      <li><a href="#mind">🧠 В черепе</a></li>
-      <li><a href="#diagnosis">🩸 Диагноз</a></li>
-      <li><a href="#sim">🪐 Симуляция</a></li>
-      <li><a href="#psych">🧷 Пластырь на лоботомию</a></li>
-      <li><a href="#trash">☠️ Мракоблог</a></li>
-      <li><a href="#vhs">📼 Шум</a></li>
-      <li><a href="#archive">📓 Архив</a></li>
-      <li><a href="#chat">🤖 Чат: «я тебя услышал»</a></li>
+      <li>
+        <a href="#mind">🧠 В черепе</a>
+        <p>Тут живёт мысль, умирающая при свете экрана. Псевдо-философия, размышления, шизобред, мозговая плесень и случайный бред, который почему-то попадает в точку.</p>
+      </li>
+      <li>
+        <a href="#diag">🩸 Диагноз</a>
+        <p>Психиатрия не лечит, она классифицирует монстров. Записи о психиатрии: БАР, психозы, галюны, таблетки, личный ад и немного медицины для тех, кто уже давно не в себе.</p>
+      </li>
+      <li>
+        <a href="#sim">🪐 Симуляция</a>
+        <p>Космос не манит — он наблюдает. Статьи про вселенную, время, чёрные дыры, симуляции и иллюзии, в которых ты сдохнешь, не поняв, был ли вообще жив.</p>
+      </li>
+      <li>
+        <a href="#psych">🧷 Пластырь на лоботомию</a>
+        <p>Психология для тех, кто уже сломан, но любит копаться в обломках. Теории, механизмы, поведенческие шаблоны, травма как стиль, эмоции как насмешка. Без соплей, но с кровью.</p>
+      </li>
+      <li>
+        <a href="#trash">☠️ Мракоблог</a>
+        <p>Как если бы Куплинов вёл дневник в морге. Мини-блог: нытьё, панчи, чёрный юмор, одиночество, быт и личное, но так, чтобы не захотелось обнять — только курнуть.</p>
+      </li>
+      <li>
+        <a href="#vhs">📼 Шум</a>
+        <p>Нечто между VHS-кошмаром и шепотом на частоте 4:03 ночи. Гифки, визуал, случайные образы. Без контекста, без цели, просто чтобы тревожно стало.</p>
+      </li>
+      <li>
+        <a href="#archive">📓 Архив</a>
+        <p>Свалка мыслей, ошибок и усталости. Старые тексты, черновики, незаконченные идеи. Как мозг после депрессии: всё вроде есть, а смысла — ни капли.</p>
+      </li>
+      <li>
+        <a href="#chat">🤖 Чат: «я тебя услышал»</a>
+        <p>Говоришь в бездну, а она кивает. Мини-бот, который отвечает репликами типа «ммм», «тоже так чувствую», «ебать», «ну не знаю, брат», «держись». Просто чтобы было с кем говорить, не включая никого живого.</p>
+      </li>
     </ul>
   </nav>
 
-  <main id="main-content">
-    <!-- Контент подгружается отсюда -->
+  <main>
+    <!-- Тут будут секции и статьи -->
   </main>
-
-  <footer>
-    <section id="chat">
-      <h2>Чёрный чат</h2>
-      <input type="text" id="userInput" placeholder="Напиши сюда что-нибудь">
-      <button onclick="getResponse()">спросить</button>
-      <p id="chatResponse">...</p>
-    </section>
-  </footer>
 </body>
 </html>
