--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </li>
       <li>
         <a href="#trash">☠️ Мракоблог</a>
-        <p>Как если бы Куплинов вёл дневник в морге. Мини-блог: нытьё, панчи, чёрный юмор, одиночество, быт и личное, но так, чтобы не захотелось обнять — только курнуть.</p>
+        <p>Как если бы клоун вёл дневник в морге. Мини-блог: нытьё, панчи, чёрный юмор, одиночество, быт и личное, но так, чтобы не захотелось обнять — только курнуть.</p>
       </li>
       <li>
         <a href="#vhs">📼 Шум</a>
