--- a/index.html
+++ b/index.html
@@ -4,53 +4,51 @@
   <meta charset="UTF-8">
   <title>Моль Демьен</title>
   <link rel="stylesheet" href="style.css">
-  <script src="effects.js" defer></script>
   <script src="interact.js" defer></script>
+  <script src="whispers.js" defer></script>
 </head>
 <body>
   <header>
     <h1>Моль Демьен</h1>
   </header>
-
   <nav>
-    <ul>
-      <li>
-        <a href="#mind">🧠 В черепе</a>
-        <p>Тут живёт мысль, умирающая при свете экрана. Псевдо-философия, размышления, шизобред, мозговая плесень и случайный бред, который почему-то попадает в точку.</p>
+    <ul class="menu">
+      <li><a href="#skull">🧠 В черепе</a>
+        <p>Тут живёт мысль, умирающая при свете экрана.<br>
+        Псевдо-философия, размышления, шизобред, мозговая плесень и случайный бред, который почему-то попадает в точку.</p>
       </li>
-      <li>
-        <a href="#diag">🩸 Диагноз</a>
-        <p>Психиатрия не лечит, она классифицирует монстров. Записи о психиатрии: БАР, психозы, галюны, таблетки, личный ад и немного медицины для тех, кто уже давно не в себе.</p>
+      <li><a href="#diagnosis">🩸 Диагноз</a>
+        <p>Психиатрия не лечит, она классифицирует монстров.<br>
+        Записи о психиатрии: БАР, психозы, галюны, таблетки, личный ад и немного медицины для тех, кто уже давно не в себе.</p>
       </li>
-      <li>
-        <a href="#sim">🪐 Симуляция</a>
-        <p>Космос не манит — он наблюдает. Статьи про вселенную, время, чёрные дыры, симуляции и иллюзии, в которых ты сдохнешь, не поняв, был ли вообще жив.</p>
+      <li><a href="#simulation">🪐 Симуляция</a>
+        <p>Космос не манит — он наблюдает.<br>
+        Статьи про вселенную, время, чёрные дыры, симуляции и иллюзии, в которых ты сдохнешь, не поняв, был ли вообще жив.</p>
       </li>
-      <li>
-        <a href="#psych">🧷 Пластырь на лоботомию</a>
-        <p>Психология для тех, кто уже сломан, но любит копаться в обломках. Теории, механизмы, поведенческие шаблоны, травма как стиль, эмоции как насмешка. Без соплей, но с кровью.</p>
+      <li><a href="#lobotomy">🧷 Пластырь на лоботомию</a>
+        <p>Психология для тех, кто уже сломан, но любит копаться в обломках.<br>
+        Теории, механизмы, поведенческие шаблоны, травма как стиль, эмоции как насмешка. Без соплей, но с кровью.</p>
       </li>
-      <li>
-        <a href="#trash">☠️ Мракоблог</a>
-        <p>Как если бы клоун вёл дневник в морге. Мини-блог: нытьё, панчи, чёрный юмор, одиночество, быт и личное, но так, чтобы не захотелось обнять — только курнуть.</p>
+      <li><a href="#blog">☠️ Мракоблог</a>
+        <p>Как если бы Куплинов вёл дневник в морге.<br>
+        Мини-блог: нытьё, панчи, чёрный юмор, одиночество, быт и личное, но так, чтобы не захотелось обнять — только курнуть.</p>
       </li>
-      <li>
-        <a href="#vhs">📼 Шум</a>
-        <p>Нечто между VHS-кошмаром и шепотом на частоте 4:03 ночи. Гифки, визуал, случайные образы. Без контекста, без цели, просто чтобы тревожно стало.</p>
+      <li><a href="#vhs">📼 Шум</a>
+        <p>Нечто между VHS-кошмаром и шепотом на частоте 4:03 ночи.<br>
+        Гифки, визуал, случайные образы. Без контекста, без цели, просто чтобы тревожно стало.</p>
       </li>
-      <li>
-        <a href="#archive">📓 Архив</a>
-        <p>Свалка мыслей, ошибок и усталости. Старые тексты, черновики, незаконченные идеи. Как мозг после депрессии: всё вроде есть, а смысла — ни капли.</p>
+      <li><a href="#archive">📓 Архив</a>
+        <p>Свалка мыслей, ошибок и усталости.<br>
+        Старые тексты, черновики, незаконченные идеи. Как мозг после депрессии: всё вроде есть, а смысла — ни капли.</p>
       </li>
-      <li>
-        <a href="#chat">🤖 Чат: «я тебя услышал»</a>
-        <p>Говоришь в бездну, а она кивает. Мини-бот, который отвечает репликами типа «ммм», «тоже так чувствую», «ебать», «ну не знаю, брат», «держись». Просто чтобы было с кем говорить, не включая никого живого.</p>
+      <li><a href="#chat">🤖 Чат: «я тебя услышал»</a>
+        <p>Говоришь в бездну, а она кивает.<br>
+        Мини-бот, который отвечает репликами типа «ммм», «тоже так чувствую», «ебать», «ну не знаю, брат», «держись». Просто чтобы было с кем говорить, не включая никого живого.</p>
       </li>
     </ul>
   </nav>
-
   <main>
-    <!-- Тут будут секции и статьи -->
+    <!-- Основной контент будет тут -->
   </main>
 </body>
 </html>
