--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Моль Демьен</title>
+  <title>Moth Damien</title>
   <link rel="stylesheet" href="style.css">
   <script src="interact.js" defer></script>
-  <script src="whispers.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Моль Демьен</h1>
+    <h1>Moth Damien</h1>
   </header>
   <nav>
-    <ul class="menu">
-      <li><a href="#skull">🧠 В черепе</a>
-        <p>Тут живёт мысль, умирающая при свете экрана.<br>
-        Псевдо-философия, размышления, шизобред, мозговая плесень и случайный бред, который почему-то попадает в точку.</p>
-      </li>
-      <li><a href="#diagnosis">🩸 Диагноз</a>
-        <p>Психиатрия не лечит, она классифицирует монстров.<br>
-        Записи о психиатрии: БАР, психозы, галюны, таблетки, личный ад и немного медицины для тех, кто уже давно не в себе.</p>
-      </li>
-      <li><a href="#simulation">🪐 Симуляция</a>
-        <p>Космос не манит — он наблюдает.<br>
-        Статьи про вселенную, время, чёрные дыры, симуляции и иллюзии, в которых ты сдохнешь, не поняв, был ли вообще жив.</p>
-      </li>
-      <li><a href="#lobotomy">🧷 Пластырь на лоботомию</a>
-        <p>Психология для тех, кто уже сломан, но любит копаться в обломках.<br>
-        Теории, механизмы, поведенческие шаблоны, травма как стиль, эмоции как насмешка. Без соплей, но с кровью.</p>
-      </li>
-      <li><a href="#blog">☠️ Мракоблог</a>
-        <p>Как если бы Куплинов вёл дневник в морге.<br>
-        Мини-блог: нытьё, панчи, чёрный юмор, одиночество, быт и личное, но так, чтобы не захотелось обнять — только курнуть.</p>
-      </li>
-      <li><a href="#vhs">📼 Шум</a>
-        <p>Нечто между VHS-кошмаром и шепотом на частоте 4:03 ночи.<br>
-        Гифки, визуал, случайные образы. Без контекста, без цели, просто чтобы тревожно стало.</p>
-      </li>
-      <li><a href="#archive">📓 Архив</a>
-        <p>Свалка мыслей, ошибок и усталости.<br>
-        Старые тексты, черновики, незаконченные идеи. Как мозг после депрессии: всё вроде есть, а смысла — ни капли.</p>
-      </li>
-      <li><a href="#chat">🤖 Чат: «я тебя услышал»</a>
-        <p>Говоришь в бездну, а она кивает.<br>
-        Мини-бот, который отвечает репликами типа «ммм», «тоже так чувствую», «ебать», «ну не знаю, брат», «держись». Просто чтобы было с кем говорить, не включая никого живого.</p>
-      </li>
-    </ul>
+    <a href="#skull">🧠 Inside the Skull</a>
+    <a href="#diagnosis">🩸 Diagnosis</a>
+    <a href="#simulation">🪐 Simulation</a>
+    <a href="#lobotomy">🧷 Lobotomy Bandage</a>
+    <a href="#blog">☠️ Darklog</a>
+    <a href="#noise">📼 Noise</a>
+    <a href="#archive">📓 Archive</a>
+    <a href="#chat">🤖 Chat: "I heard you"</a>
   </nav>
   <main>
-    <!-- Основной контент будет тут -->
+    <section id="skull">
+      <h2>Inside the Skull</h2>
+      <p>This is where thoughts live and die under the screen’s light. Pseudo-philosophy, schizobabble, moldy brain soup and stray ramblings that somehow hit the spot.</p>
+    </section>
+    <section id="diagnosis">
+      <h2>Diagnosis</h2>
+      <p>Psychiatry doesn’t cure — it classifies monsters. Notes on madness: bipolarity, psychosis, meds, private hell and a bit of medicine for the already lost.</p>
+    </section>
+    <section id="simulation">
+      <h2>Simulation</h2>
+      <p>Space doesn’t attract — it watches. Posts about the universe, time, black holes, simulations and illusions you’ll die in without knowing if you were ever alive.</p>
+    </section>
+    <section id="lobotomy">
+      <h2>Lobotomy Bandage</h2>
+      <p>Psychology for those already broken who like digging through their ruins. Theories, trauma, emotions like a joke — no sobbing, just blood.</p>
+    </section>
+    <section id="blog">
+      <h2>Darklog</h2>
+      <p>Like if a clown kept a diary in a morgue. Mini-blog: whining, punchlines, dark humor, loneliness, daily decay — not to hug, just to inhale.</p>
+    </section>
+    <section id="noise">
+      <h2>Noise</h2>
+      <p>Somewhere between VHS nightmares and whispers on a 4:03 AM frequency. GIFs, visuals, random vibes. No context, no goal, just anxiety.</p>
+    </section>
+    <section id="archive">
+      <h2>Archive</h2>
+      <p>Dump of thoughts, mistakes and exhaustion. Old drafts, forgotten fragments — like a post-depression brain: everything’s there, nothing makes sense.</p>
+    </section>
   </main>
 </body>
 </html>
