--- a/index.html
+++ b/index.html
@@ -11,54 +11,44 @@
     <h1>Moth Damien</h1>
   </header>
   <nav>
-    <a href="#skull">🧠 Inside the Skull</a>
-    <a href="#diagnosis">🩸 Diagnosis</a>
-    <a href="#simulation">🪐 Simulation</a>
-    <a href="#lobotomy">🧷 Lobotomy Bandage</a>
-    <a href="#blog">☠️ Darklog</a>
-    <a href="#noise">📼 Noise</a>
-    <a href="#archive">📓 Archive</a>
-    <a href="#chat">🤖 Chat: "I heard you"</a>
+    <a href="skull.html">🧠 Inside the Skull</a>
+    <a href="diagnosis.html">🩸 Diagnosis</a>
+    <a href="simulation.html">🪐 Simulation</a>
+    <a href="lobotomy.html">🧷 Lobotomy Bandage</a>
+    <a href="darklog.html">☠️ Darklog</a>
+    <a href="noise.html">📼 Noise</a>
+    <a href="archive.html">📓 Archive</a>
+    <a href="chat.html">🤖 Chat: "I heard you"</a>
   </nav>
   <main>
-    <section id="skull">
+    <section>
       <h2>Inside the Skull</h2>
       <p>This is where thoughts live and die under the screen’s light. Pseudo-philosophy, schizobabble, moldy brain soup and stray ramblings that somehow hit the spot.</p>
     </section>
-    <section id="diagnosis">
+    <section>
       <h2>Diagnosis</h2>
       <p>Psychiatry doesn’t cure — it classifies monsters. Notes on madness: bipolarity, psychosis, meds, private hell and a bit of medicine for the already lost.</p>
     </section>
-    <section id="simulation">
+    <section>
       <h2>Simulation</h2>
       <p>Space doesn’t attract — it watches. Posts about the universe, time, black holes, simulations and illusions you’ll die in without knowing if you were ever alive.</p>
     </section>
-    <section id="lobotomy">
+    <section>
       <h2>Lobotomy Bandage</h2>
       <p>Psychology for those already broken who like digging through their ruins. Theories, trauma, emotions like a joke — no sobbing, just blood.</p>
     </section>
-    <section id="blog">
+    <section>
       <h2>Darklog</h2>
       <p>Like if a clown kept a diary in a morgue. Mini-blog: whining, punchlines, dark humor, loneliness, daily decay — not to hug, just to inhale.</p>
     </section>
-    <section id="noise">
+    <section>
       <h2>Noise</h2>
       <p>Somewhere between VHS nightmares and whispers on a 4:03 AM frequency. GIFs, visuals, random vibes. No context, no goal, just anxiety.</p>
     </section>
-    <section id="archive">
+    <section>
       <h2>Archive</h2>
       <p>Dump of thoughts, mistakes and exhaustion. Old drafts, forgotten fragments — like a post-depression brain: everything’s there, nothing makes sense.</p>
     </section>
   </main>
 </body>
 </html>
-<div id="content-placeholder"></div>
-
-<script>
-  fetch('content.html')
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById('content-placeholder').innerHTML = data;
-    });
-</script>
-
