--- a/index.html
+++ b/index.html
@@ -52,3 +52,10 @@
   </main>
 </body>
 </html>
+  <!-- Glitch decorations -->
+  <img class="glitch-deco glitch1" src="https://tse2.mm.bing.net/th/id/OIP.tvHOjpcv2G-mX0KvdTogFwHaO0?pid=Api" alt="glitch1">
+  <img class="glitch-deco glitch2" src="https://tse1.mm.bing.net/th/id/OIP.EaQ8QqgDvHltLMYh5zaiVgHaHa?pid=Api" alt="glitch2">
+  <img class="glitch-deco glitch3" src="https://tse1.mm.bing.net/th/id/OIP.RHBr6kodwEimWljhH_Zl6QHaFj?pid=Api" alt="glitch3">
+  <img class="glitch-deco glitch4" src="https://tse3.mm.bing.net/th/id/OIP.6tLKRINj8BAv1bt5aGvKxwHaF6?pid=Api" alt="glitch4">
+</body>
+</html>
