--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <script src="interact.js" defer></script>
 </head>
 <body>
+  <div class="glitch-container">
+  <img src="https://64.media.tumblr.com/55df557e7258a32dbb00f4c3e365237a/tumblr_nji9vuJ29p1t3jdtjo1_500.gif" class="glitch" />
+  <img src="https://i.pinimg.com/originals/b4/f1/e2/b4f1e20f6b1f62c6e4c6b27b317d4d59.gif" class="glitch" />
+  <img src="https://i.pinimg.com/originals/2b/0a/15/2b0a15b1b2634ac75b26ef4f365d3c42.gif" class="glitch" />
+  <img src="https://media.tenor.com/CyDN05Mz5QoAAAAC/glitch.gif" class="glitch" />
+</div>
   <header>
     <h1>Moth Damien</h1>
   </header>
@@ -50,12 +56,5 @@
       <p>Dump of thoughts, mistakes and exhaustion. Old drafts, forgotten fragments — like a post-depression brain: everything’s there, nothing makes sense.</p>
     </section>
   </main>
-</body>
-</html>
-  <!-- Glitch decorations -->
-  <img class="glitch-deco glitch1" src="https://tse2.mm.bing.net/th/id/OIP.tvHOjpcv2G-mX0KvdTogFwHaO0?pid=Api" alt="glitch1">
-  <img class="glitch-deco glitch2" src="https://tse1.mm.bing.net/th/id/OIP.EaQ8QqgDvHltLMYh5zaiVgHaHa?pid=Api" alt="glitch2">
-  <img class="glitch-deco glitch3" src="https://tse1.mm.bing.net/th/id/OIP.RHBr6kodwEimWljhH_Zl6QHaFj?pid=Api" alt="glitch3">
-  <img class="glitch-deco glitch4" src="https://tse3.mm.bing.net/th/id/OIP.6tLKRINj8BAv1bt5aGvKxwHaF6?pid=Api" alt="glitch4">
 </body>
 </html>
