--- a/index.html
+++ b/index.html
@@ -7,17 +7,11 @@
   <script src="interact.js" defer></script>
 </head>
 <body>
-  <div class="glitch-container">
-    <img src="https://media.tenor.com/CyDN05Mz5QoAAAAC/glitch.gif" class="glitch" />
-    <img src="https://64.media.tumblr.com/9f373c8c1f7b69d9a727f7a0d2b1b2db/tumblr_inline_p8cgw44dAi1r17ror_500.gif" class="glitch" />
-    <img src="https://64.media.tumblr.com/6c982f967c66a4e76dc660d6fa3a4a48/tumblr_o5c7ubM3Ll1uf9kkzo1_500.gif" class="glitch" />
-    <img src="https://64.media.tumblr.com/42f8ecf1e9c3a17e839fc22362b414f3/tumblr_nhrk1pvRtg1r17roro1_500.gif" class="glitch" />
-    <img src="https://64.media.tumblr.com/4978cbd50b0fdbaf338a3c4c5bd3d92b/tumblr_p14tqts6MZ1w9ifvso1_500.gif" class="glitch" />
-    <img src="https://64.media.tumblr.com/1d02f5f9341dfc4c8e2d92c18bb0cf32/tumblr_oxqkyxMhd91w9ifvso1_500.gif" class="glitch" />
-    <img src="https://64.media.tumblr.com/73d4015a2f5b219aad46b5f1d1d0e236/tumblr_p4oqxsc0Jv1w9ifvso1_500.gif" class="glitch" />
-    <img src="https://64.media.tumblr.com/bb88c73472c36efbc3c77c9b85902096/tumblr_oxpu4aZsQg1w9ifvso1_500.gif" class="glitch" />
-    <img src="https://64.media.tumblr.com/ca1b7e842ff983d29f6b56edcd8f0e60/tumblr_oxpzqdx0js1w9ifvso1_500.gif" class="glitch" />
-    <img src="https://64.media.tumblr.com/10f4ff098c9a36b3cf021d9b09a97b99/tumblr_p3bxna0V1E1w9ifvso1_500.gif" class="glitch" />
+ <div class="image-chaos">
+  <img src="images/giant-doll.jpg" alt="giant doll" class="chaos-img chaos1">
+  <img src="images/green-screens.jpg" alt="green screen eyes" class="chaos-img chaos2">
+  <img src="images/digital-crucifix.jpg" alt="crucifix wires" class="chaos-img chaos3">
+</div>
   </div>
   <header>
     <h1>Moth Damien</h1>
