--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <script src="interact.js" defer></script>
 </head>
 <body>
- <div class="image-chaos">
-  <img src="images/giant-doll.jpg" alt="giant doll" class="chaos-img chaos1">
-  <img src="images/green-screens.jpg" alt="green screen eyes" class="chaos-img chaos2">
-  <img src="images/digital-crucifix.jpg" alt="crucifix wires" class="chaos-img chaos3">
-</div>
+
+  <!-- Хаотично расположенные изображения -->
+  <div class="chaotic-images">
+    <img src="images/giant-doll.jpg" alt="giant doll" class="chaotic-image" style="top: 60px; left: 8%;">
+    <img src="images/green-screens.jpg" alt="green screens" class="chaotic-image" style="top: 200px; left: 65%;">
+    <img src="images/digital-crucifix.jpg" alt="digital crucifix" class="chaotic-image" style="top: 350px; left: 35%;">
   </div>
+
   <header>
     <h1>Moth Damien</h1>
   </header>
@@ -58,3 +60,4 @@
   </main>
 </body>
 </html>
+
